--- a/drivers/video/Makefile
+++ b/drivers/video/Makefile
@@ -15,3 +15,5 @@ ifeq ($(CONFIG_OF),y)
 obj-$(CONFIG_VIDEOMODE_HELPERS) += of_display_timing.o of_videomode.o
 endif
 obj-$(CONFIG_PANEL_NOTIFICATIONS) += panel_notifier.o
+
+obj-$(CONFIG_MSM_MDSS_PLL)        += msm/mdss/mdss_io_util.o
