--- a/arch/arm64/configs/albus_defconfig
+++ b/arch/arm64/configs/albus_defconfig
@@ -2956,8 +2956,8 @@ CONFIG_FB_QUICKDRAW=y
 # CONFIG_MSM_BA_V4L2 is not set
 CONFIG_MSM_DBA=y
 CONFIG_MSM_DBA_ADV7533=y
-# CONFIG_MSM_DBA_MOT_DBA is not set
-# CONFIG_MSM_DBA_DSI_MOD_DISPLAY is not set
+CONFIG_MSM_DBA_MOT_DBA=y
+CONFIG_MSM_DBA_DSI_MOD_DISPLAY=y
 CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP is not set
 CONFIG_FB_MSM_MDSS=y
